# VULKAN-TEST-2

./: CMakeLists.txt  Vulkan_test2.kdev4  appInterface.cpp  appInterface.hpp  main.cpp  pipeLines.cpp  pipeLines.hpp  reWindow.cpp  reWindow.hpp  shader_compile.sh
.kdev4/: Vulkan_test2.kdev4
shaders/: simpl_shader.frag  simpl_shader.vert
